# CourseWork_1

./: README.md  pyproject.toml
src/: external_api.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_external_api.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
