[tool.poetry]
name = "coursework-1"
version = "0.1.0"
description = ""
authors = ["екатерина ермакова <katka_z_jones@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untiped_defs = true
no_implicit_any = true
warn_return_any = true
exclude = "venv"
check_untyped_defs = true
warn_unreachable = true

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119




